@@ -5,7 +5,7 @@ includedir=${prefix}/include
 
 Name: libdessert
 Description: DES-SERT - an Extensible Routing-Framework for Testbeds
-Version: 0.90
+Version: 0.91
 Libs: -lpthread -L${libdir} -ldessert
 Cflags:  -I${includedir}
 
